# generate_classDiagram

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
headers/: UI_Manger.hpp  container_manger.hpp  file_control.hpp  relation_manger.hpp  service_manager.hpp
src/: UI_Manger.cpp  container_manger.cpp  file_control.cpp  relation_manger.cpp  service_manger.cpp
